syntax = "proto3";

package order;

option go_package = "github.com/danikdaraboz/ecommerce/order-service/pb";

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
    rpc GetOrder(GetOrderRequest) returns (OrderResponse);
    rpc GetUserOrders(GetUserOrdersRequest) returns (ListOrdersResponse);
    rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (OrderResponse);
    rpc CancelOrder(CancelOrderRequest) returns (Empty);
}

message Order {
    string id = 1;
    string user_id = 2;
    repeated OrderItem items = 3;
    double total = 4;
    string status = 5;
    string created_at = 6;
}

message OrderItem {
    string product_id = 1;
    int32 quantity = 2;
    double price = 3;
}

message CreateOrderRequest {
    string user_id = 1;
    repeated OrderItem items = 2;
}

message GetOrderRequest {
    string id = 1;
}

message GetUserOrdersRequest {
    string user_id = 1;
}

message UpdateOrderStatusRequest {
    string id = 1;
    string status = 2;
}

message CancelOrderRequest {
    string id = 1;
}

message OrderResponse {
    Order order = 1;
}

message ListOrdersResponse {
    repeated Order orders = 1;
}

message Empty {}